using Grpc.Core;
using Microsoft.AspNetCore.Server.Kestrel.Core;

var builder = WebApplication.CreateBuilder();
builder.Services.AddGrpc();

builder.WebHost.ConfigureKestrel(k =>
{
    k.ConfigureEndpointDefaults(options => options.Protocols = HttpProtocols.Http2);
    k.ListenLocalhost(5500, o => o.UseHttps());
});

var app = builder.Build();

app.UseGrpcWeb();
app.MapGrpcService<BillboardService>().EnableGrpcWeb();
app.MapGet("/", () => "This server contains a gRPCWeb service");
app.Run();

public class BillboardService : Billboard.Board.BoardBase
{
    public override Task<Billboard.MessageReply> ShowMessage(Billboard.MessageRequest request, ServerCallContext context)
    {
        var now = DateTime.UtcNow;
        return Task.FromResult(new Billboard.MessageReply
        {
            DisplayTime = now.Ticks,
            ReceiveFrom = request.Sender
        });
    }
}